# crypto_app

./: .gitignore  CMakeLists.txt  CMakePresets.json
api/: CMakeLists.txt
api/include/: encryption.h  http_server.h
api/src/: encryption.cpp  http_server.cpp
src/: main.cpp
views/: package-lock.json  package.json
views/public/: index.html
views/src/: App.js
